Thu Sep 28 10:15:07 CEST 2006 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py: apply patch for bug #327983 to ease localization
	  of an error string

2006-08-28  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/sabayon.desktop.in:
	Change sabayon category to GNOME;Application;System;Settings;
	(#331615) Patch from Wouter Bolsterlee

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Bump intltool req.

2006-08-03  Jovan Naumovski  <jovan@lugola.net>

	* Added sl.po to po/ and 'sl' to LINGUAS

2006-07-28  Alexander Larsson  <alexl@redhat.com>

	* lib/config.py.in:
	Remove #!

2006-07-28  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/Makefile.am:
	* admin-tool/lockdown/Makefile.am:
	* lib/Makefile.am:
	* lib/sources/Makefile.am:
	Install into lib64 on 64bit arches,  because we ship
	an .so file.

2006-07-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

==================== 2.12.4 ====================

2006-07-27  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2006-07-27  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/aboutdialog.py:
	* admin-tool/changeswindow.py:
	* admin-tool/editorwindow.py:
	* admin-tool/fileviewer.py:
	* admin-tool/gconfviewer.py:
	* admin-tool/lockdownappliersabayon.py:
	* admin-tool/profilesdialog.py:
	* admin-tool/saveconfirm.py:
	* admin-tool/sessionwidget.py:
	* admin-tool/sessionwindow.py:
	* admin-tool/usersdialog.py:
	* lib/cache.py:
	* lib/dirmonitor.py:
	* lib/mozilla_bookmarks.py:
	* lib/protosession.py:
	* lib/sources/filessource.py:
	* lib/sources/gconfsource.py:
	* lib/sources/mozillasource.py:
	* lib/sources/paneldelegate.py:
	* lib/sources/testsource.py:
	* lib/storage.py:
	* lib/userdb.py:
	* lib/usermod.py:
	* lib/userprofile.py:
	* lib/util.py:
	Remove unneeded #! from python files

2006-04-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Use po/LINGUAS (#338011)
	Patch from Przemyslaw Grzegorczyk
	 