@@ -1,3 +1,8 @@
+Thu Sep 28 11:30:52 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* admin-tool/Makefile.am: applied patch from Joseph Sacco to have
+	  a nicer 'make uninstall' closes bug #339807
+
 Thu Sep 28 10:15:07 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* lib/userdb.py: apply patch for bug #327983 to ease localization
